static/css/style.css
body {
    background-color: #a9ccfa;
    color: #F9FAFC;
}

.bg{
    background-image: url(../city_background.jpg);
    background-size: 100% 100%;  
    width: 100%; 
    height: 600px;
}

.brand {
    font-family: Lato, sans-serif;
    font-size: 1.4rem;
    font-weight: 700;
    color: #4A4A4F;
}

.blue-brand {
    color: #1237dd;
}

.thin {
    font-weight: 300;
}

.light-bg {
    background-color: #fff;
}

.dark-bg {
    background-color: #395675;
}

.main-bg {
    background-color: #F9FAFC;
}

.card {
    border: none;
    background-color: transparent;
}

.image-container {
    position: relative;
    border-radius: 50%;
}

.image-flash {
    position: absolute;
    bottom: 5%;
    min-width: 30%;
    left: -2px;
    background-color: #23BBBB;
}

h1 {
    text-align: center;
    margin: 50px;
}

.author {
    color: white;
    margin: 4px;
    text-transform: uppercase;
}

.masthead {
    margin-top: 10px;
    overflow: hidden;
    position: relative;
    display: inline-block;
    height: 33vh;
    width: 100%;
}

.masthead-text {
    background-color: #395675;
    color: white;
    position: relative;
}

.masthead-image {
    position: relative;
    overflow: hidden;
}

.masthead-image:after {
    content: "";
    position: absolute;
    top: 0;
    right: 90%;
    height: 100%;
    width: 150%;
    background: #395675;
    -webkit-transform: skew(15deg);
    -moz-transform: skew(15deg);
    transform: skew(15deg);
    z-index: 100;
}

.post-link {
    text-decoration: none;
    color: #ffffff;
}

.post-link:hover,
.page-link {
    color: #0dcaf0;
}

.post-title {
    margin-top: 20%;
    margin-left: 5%;
}

.post-date {
    margin-top: 20%;
    margin-left: 5%;
}

.post-subtitle {
    margin-left: 5%;
    color: lightgray;
}

.btn-signup {
    background-color: #23BBBB;
    color: #fff;
}

.btn-form {
    background-color: #fff;
    color: #23BBBB;
    font-weight: 700;
}

.btn-signup:hover,
.btn-signup:active {
    background-color: #fff;
    color: #23BBBB;
}

.link {
    color: #23BBBB;
    text-decoration: none;
}

.link:hover,
.link:active {
    color: #445261;
    text-decoration: underline;
}

#form {
    left      : 50%;
    top       : 50%;
    position  : absolute;
    transform : translate(-50%, -50%);
}

#commentbox {
    
    min-height: calc(5.5em + 1rem + 2px);
    padding: 0.5rem 1rem;
    font-size: 1.25rem;
    border-radius: 0.3rem;
}

.footer {
    position: relative;
    bottom: 0;
    width: 100%;
    height: 40px;
    line-height: 15px;
  }

